--- a/lightweight_server/static/index.html
+++ b/lightweight_server/static/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lightweight Rust Server</title>
+    <title>Rust File Server</title>
 </head>
 <body>
-    <h1>Welcome to the Lightweight Rust Server!</h1>
-    <p>This page is served using Rust, Hyper, and Tokio.</p>
+    <h1>Welcome to Rust File Server</h1>
+    <p>This is a simple file server built with Rust, Hyper, and Tokio.</p>
 </body>
 </html>
